@@ -65,6 +65,10 @@ Debug:
 Recovery:
 * scan for records in chunk free space
 
+20121214
+* worked on formatted message strings
+* evtxexport: added decimal event number
+
 20121213
 * worked on formatted message strings
 
